# Cine-Reserve---B2BIT

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
cine_reserve/: asgi.py  celery.py  settings.py  test_settings.py  urls.py  wsgi.py
helpers/: get_lock_key.py
movie_app/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
movie_app/migrations/: 0001_initial.py  0002_movie_is_available.py
room_app/: admin.py  apps.py  models.py  tests.py
room_app/migrations/: 0001_initial.py
session_app/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  throttling.py  urls.py  views.py
session_app/migrations/: 0001_initial.py  0002_session_is_available.py  0003_alter_session_movie_alter_session_room.py
user_app/: serializers.py  tests.py  throttling.py  urls.py  views.py
